profile history editProfile

--- a/Homework/software_customer/controlbar/footer.html
+++ b/Homework/software_customer/controlbar/footer.html
@@ -28,7 +28,7 @@
 </style>
 
 <footer class="footer">
-    <div class="container">
+    <div class="">
         <p>© 2024 IT Solutions, Inc. All rights reserved.</p>
         <p>
             <a href="#">Privacy Policy</a> |
