--- a/Homework/software_customer/controlbar/Navbarcustomer.html
+++ b/Homework/software_customer/controlbar/Navbarcustomer.html
@@ -35,6 +35,10 @@
         .navbar-botton {
             padding: 30px;
         }
+        .navbar-right {
+            float: right;
+        }
+
     </style>
 </head>
 <body>
@@ -42,13 +46,20 @@
     <div class="navbar-logo">
         <a href=#home class=logo> <img width=100 height=100 src=https://ik.imagekit.io/seproject/head.png?updatedAt=1679497559423 alt=home/> </a>
     </div>
-    
+
     <div class="navbar-botton">
         <a href="welcome.php">หน้าหลัก</a>
         <a href="../view/showproduct.php">สินค้า</a>
         <a href="../view/showbasketall.php">ตะกร้าสินค้า</a>
         <a href="../view/showbillall.php">ใบออเดอร์สินค้า</a>
+        <div class="navbar-right">
+            <a href="../view/profile.php"> 
+                <img  width=50 height=50 src="../model/picture/user.png" alt="Profile"/>
+            </a>
+        </div>
     </div>   
+
+    
 </div>
 
 <!-- Content below the navbar -->
